Color contrast issue fixed

--- a/eMiniStore/src/app/shared/header/header.component.css
+++ b/eMiniStore/src/app/shared/header/header.component.css
@@ -6,7 +6,7 @@ a {
     margin-right: 0.5rem; 
     text-decoration: bold; 
     font-weight: bold;
-    color: #007bff; 
+    color: #0f68c8; 
     font-size: large;
 }
 
